--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
@@ -22,64 +22,61 @@
     <script src="~/Resources/js/CajaGeneral.js"></script>
     <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
     <script type="text/javascript">
-        $(function () {
-            $('select').on('change', function () {
-                $('#tblfilterable tbody tr').each(function () {
-                    var value = $('#cbxentidad').find('option:selected').text();//get value to filter of selected
-                    var hiderow = $(this).find("td").eq(1).html();//get value of column entidad
-                    /*---------------------------------------*/
-                    var valuec = $('#cbxconcepto').find('option:selected').text();//get value to filter of selected
-                    var hiderowc = $(this).find("td").eq(3).html();//get value of column concepto
+        function OnSelectedChangeFilterConcepto(s, e) {
+            debugger
+            $('#tblfilterable tbody tr').each(function () {
+                /*---------------------------------------*/
+                var valuec = s.GetValue();//get value to filter of selected
+                var hiderowc = $(this).find("td").eq(3).html();//get value of column concepto
 
-                    if (value != 'Seleccione' || valuec != 'Seleccione') {
+                if (valuec != 'Seleccione') {
 
-                        if (valuec != 'Seleccione') {
-                            if (valuec != hiderowc) {
-                                var rowindex = $(this).index();
-                                $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
-                            }
-                            if (valuec == hiderowc) {
-                                var rowindex = $(this).index();
-                                $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
-                            }
+                    if (valuec != 'Seleccione') {
+                        if (valuec != hiderowc) {
+                            var rowindex = $(this).index();
+                            $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
                         }
-                        if (value != 'Seleccione') {
-                            if (value != hiderow) {
-                                var rowindex = $(this).index();
-                                $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
-                            }
-                            if (value == hiderow) {
-                                var rowindex = $(this).index();
-                                $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
-                            }
+                        if (valuec == hiderowc) {
+                            var rowindex = $(this).index();
+                            $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
                         }
                     }
-                    else { $('#tblfilterable tbody tr').show(); }
-                });
+                }
+                else { $('#tblfilterable tbody tr').show(); }
             });
-            /*******/          
-        });
-
-        function keyupDateEdit(s, e) {
+        }
+        function OnSelectedChangeFilter(s, e) {
             debugger
-            var from = $("#IdDe").val();
-            var dt = IdDe.GetDate();
-            var dt3 = IdA.GetValue();
-            var To = $(this).val();
-            var To2 = s.GetValue();
+            $('#tblfilterable tbody tr').each(function () {
+                var value = s.GetValue();
+                var hiderow = $(this).find("td").eq(1).html();//get value of column entidad             
+
+                if (value != 'Seleccione') {
+                                        
+                    if (value != 'Seleccione') {
+                        if (value != hiderow) {
+                            var rowindex = $(this).index();
+                            $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
+                        }
+                        if (value == hiderow) {
+                            var rowindex = $(this).index();
+                            $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
+                        }
+                    }
+                }
+                else { $('#tblfilterable tbody tr').show(); }
+            });
+        }
+        function keyupDateEdit(s, e) {
+            var To = s.GetValue();
             var index = 0;
             if (from != "" && To != "") {
-                var dateParts = from.split("/");
-                var datefrom = new Date(dateParts[2], dateParts[1] - 1, dateParts[0]);
-                var dateParts2 = To.split("/");
-                var dateto = new Date(dateParts2[2], dateParts2[1] - 1, dateParts2[0]);
-
                 $('#tblfilterable tbody tr').each(function () {
                     var filterdate = $(this).find("td").eq(index).html();//get value of column Fecha x
                     var dateParts3 = filterdate.split("/");
                     var datefilter = new Date(dateParts3[2].split(" ", 1), dateParts3[1] - 1, dateParts3[0]);
 
-                    if (datefilter >= datefrom && datefilter <= dateto) {
+                    if (datefilter >= from && datefilter <= To) {
                         var rowindex = $(this).index();
                         $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
                     }
@@ -124,16 +121,16 @@
                                         <div>
                                             @if (ViewBag.EsAdmin)
                                             {
-                                                <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
-                                                    @foreach (var lst in ViewBag.Empresas)
+                                            <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                                @foreach (var lst in ViewBag.Empresas)
                                                     {
-                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                                     }
-                                                </select>
+                                            </select>
                                             }
                                             else
                                             {
-                                                @ViewBag.Empresas
+                                            @ViewBag.Empresas
                                             }
                                         </div>
                                     </div>
@@ -150,32 +147,20 @@
                                 </div>
                                 <div class="col-sm-2">
                                     <b>De:</b>
-                                    @*<div class="input-group">
-                                        <span class="input-group-addon">
-                                            <i class="zmdi zmdi-calendar"></i>
-                                        </span>
-                                        <input type="text" id="IdDe" name="FechaProgramada" class="form-control date" placeholder="dd/mm/aaaa" />
-                                    </div>*@
                                     @Html.DevExpress().DateEdit(settings =>
-                                       {
-                                           settings.Name = "IdDe";
-                                           settings.Properties.UseMaskBehavior = true;
-                                           settings.Properties.EditFormat = EditFormat.Custom;
-                                           settings.Theme = "Material";
-                                           settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                           settings.Attributes.Clear();
-                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                           settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
-                                       }).GetHtml()
+                               {
+                                   settings.Name = "IdDe";
+                                   settings.Properties.UseMaskBehavior = true;
+                                   settings.Properties.EditFormat = EditFormat.Custom;
+                                   settings.Theme = "Material";
+                                   settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                   settings.Attributes.Clear();
+                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                   settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
+                               }).GetHtml()
                                 </div>
                                 <div class="col-sm-2">
                                     <b>A:</b>
-                                    @*<div class="input-group">
-                                        <span class="input-group-addon">
-                                            <i class="zmdi zmdi-calendar"></i>
-                                        </span>
-                                        <input type="text" id="IdA" name="FechaProgramada" class="form-control date" placeholder="dd/mm/aaaa" />
-                                    </div>*@
                                     @Html.DevExpress().DateEdit(settings =>
                                {
                                    settings.Name = "IdA";
@@ -183,6 +168,7 @@
                                    settings.Properties.EditFormat = EditFormat.Custom;
                                    settings.Theme = "Material";
                                    settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                   settings.Properties.DisplayFormatString = "dd/MM/yyyy";
                                    settings.Attributes.Clear();
                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
                                    settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
@@ -191,35 +177,59 @@
                                }).GetHtml()
                                 </div>
                                 <div class="col-sm-3">
-                                    <strong>Entidad:</strong>
-                                    <select id="cbxentidad" class="form-control selectpicker z-index show-tick">
-                                        <option value="0">Seleccione</option>
-                                        @if (ViewBag.CboxEntidad != null)
-                                        {
-                                            foreach (var lst in ViewBag.CboxEntidad)
-                                            {
-                                                <option value="@lst">@lst</option>
-                                            }
-                                        }
-                                    </select>
+                                    <strong>Entidad:</strong>                                 
+                                    @Html.DevExpress().ComboBox(settings =>
+                               {
+                                   settings.Name = "cbxentidad";
+                                   settings.Width = 180;
+                                   settings.SelectedIndex = 0;
+                                   settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                   settings.Theme = "Material";
+                                   settings.ClientEnabled = true;
+                                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeFilter";
+                                   settings.PreRender = (s, e) =>
+                                   {
+                                       MVCxComboBox combo = s as MVCxComboBox;
+                                       combo.Properties.Items.Insert(0, new ListEditItem("Seleccione"));
+                                       combo.SelectedIndex = 0;
+                                   };
+                               }).BindList(ViewBag.CboxEntidad).GetHtml()
                                 </div>
                                 <div class="col-sm-3">
                                     <strong>Concepto:</strong>
-                                    <select id="cbxconcepto" class="form-control show-tick">
-                                        <option value="0">Seleccione</option>
-                                        @if (ViewBag.CboxConcepto != null)
-                                        {
-                                            foreach (var lst in ViewBag.CboxConcepto)
+                                    @*<select id="cbxconcepto" class="form-control show-tick">
+                                            <option value="0">Seleccione</option>
+                                            @if (ViewBag.CboxConcepto != null)
                                             {
-                                                <option value="@lst">@lst</option>
+                                                foreach (var lst in ViewBag.CboxConcepto)
+                                                {
+                                                    <option value="@lst">@lst</option>
+                                                }
                                             }
-                                        }
-                                    </select>
+                                        </select>*@
+                                    @Html.DevExpress().ComboBox(settings =>
+                               {
+                                   settings.Name = "cbxconcepto";
+                                   settings.Width = 180;
+
+                                   settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                   settings.Theme = "Material";
+                                   settings.ClientEnabled = true;
+                                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeFilterConcepto";
+                                   settings.PreRender = (s, e) =>
+                                   {
+                                       MVCxComboBox combo = s as MVCxComboBox;
+                                       combo.Properties.Items.Insert(0, new ListEditItem("Seleccione"));
+                                       combo.SelectedIndex = 0;
+                                   };
+                               }).BindList(ViewBag.CboxConcepto).GetHtml()
                                 </div>
                                 <div class="col-sm-12">
                                     <input type="submit" value="Liquidar" formmethod="post" class="btn btn-raised btn-round btn-primary float-right" />
 
-                                    <input type="submit" id="btnConsultar" value="Consultar" formaction=@Url.Action("Consultar") formmethod="post" class="btn btn-raised btn-round btn-primary float-right" />
+                                    @*<input type="submit" id="btnConsultar" value="Consultar" formaction=@Url.Action("Consultar") formmethod="post" class="btn btn-raised btn-round btn-primary float-right" />*@
                                 </div>
                             </div>
                             <br />
